upgrade and new oom tests